[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Fonts/GugiFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Display.gd" type="Script" id=3]
[ext_resource path="res://Scenes/SaveSystem.gd" type="Script" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.878431, 0.878431, 0.878431, 1 )

[node name="Display" type="Label" parent="."]
margin_left = 414.022
margin_top = 91.5114
margin_right = 594.022
margin_bottom = 192.511
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
text = "0"
align = 1
valign = 1
script = ExtResource( 3 )

[node name="Buttons" type="Node2D" parent="."]
editor/display_folded = true

[node name="SubtractButton" type="TextureButton" parent="Buttons"]
editor/display_folded = true
margin_left = 402.859
margin_top = 195.215
margin_right = 502.859
margin_bottom = 280.215
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/SubtractButton"]
margin_left = 7.27838
margin_top = -3.33109
margin_right = 90.2784
margin_bottom = 97.6689
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
text = "-"
align = 1
valign = 1

[node name="AddButton" type="TextureButton" parent="Buttons"]
editor/display_folded = true
margin_left = 502.287
margin_top = 192.625
margin_right = 632.287
margin_bottom = 291.625
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/AddButton"]
margin_left = 22.8885
margin_top = -1.11829
margin_right = 105.889
margin_bottom = 99.8817
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
text = "+"

[node name="Save" type="TextureButton" parent="Buttons"]
editor/display_folded = true
margin_left = 155.0
margin_top = 370.0
margin_right = 436.0
margin_bottom = 483.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/Save"]
margin_left = 6.14993
margin_top = 7.80884
margin_right = 253.15
margin_bottom = 108.809
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
text = "Save"

[node name="Load" type="TextureButton" parent="Buttons"]
editor/display_folded = true
margin_left = 620.0
margin_top = 370.0
margin_right = 877.0
margin_bottom = 488.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/Load"]
margin_left = 5.03415
margin_top = 7.80884
margin_right = 252.034
margin_bottom = 108.809
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
text = "Load"

[node name="SaveSystem" type="Node2D" parent="."]
script = ExtResource( 4 )
[connection signal="pressed" from="Buttons/SubtractButton" to="." method="SubtractPressed"]
[connection signal="pressed" from="Buttons/AddButton" to="." method="AddPressed"]
[connection signal="pressed" from="Buttons/Save" to="." method="SavePressed"]
[connection signal="pressed" from="Buttons/Load" to="." method="LoadPressed"]
